--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scroll-parallax": "^2.3.2"
+    "react-scroll-parallax": "^2.3.2",
+    "react-stickynode": "^2.1.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
