--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "gatsby": "^2.19.45",
     "gatsby-plugin-config": "^1.0.7",
     "gatsby-plugin-firebase": "^0.2.0-beta.4",
+    "gatsby-plugin-react-helmet": "^3.2.0",
     "gatsby-plugin-sass": "^2.1.31",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-stickynode": "^2.1.1"
   },
   "devDependencies": {
