--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-stickynode": "^2.1.1"
+    "react-stickynode": "^2.1.1",
+    "validator": "^13.0.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
